Change names of products

--- a/content/payments/umap/mandates/one-shot.mdx
+++ b/content/payments/umap/mandates/one-shot.mdx
@@ -1,11 +1,11 @@
 ---
-sidebar_title: One-time
-page_title: UMAP - Mandates - One-time mandates
+sidebar_title: OneShot
+page_title: UMAP - Mandates - OneShot
 order: 1
 visible_in_sidebar: true
 ---
 
-## One-time mandates
+## OneShot (One time mandates)
 
 <Text size="small" weight="600">
   PREREQUISITES&nbsp;
