--- a/content/payments/umap/mandates/recur.mdx
+++ b/content/payments/umap/mandates/recur.mdx
@@ -1,11 +1,11 @@
 ---
-sidebar_title: Recurring
-page_title: UMAP - Mandates - Recurring mandates
+sidebar_title: Recur
+page_title: UMAP - Mandates - Recur
 order: 1
 visible_in_sidebar: true
 ---
 
-## Recurring mandates
+## Recur (Recurring mandates)
 
 <Text size="small" weight="600">
   PREREQUISITES&nbsp;
