--- a/content/payments/umap/mandates/reserve-plus.mdx
+++ b/content/payments/umap/mandates/reserve-plus.mdx
@@ -1,11 +1,11 @@
 ---
-sidebar_title: Single block multi-debit
-page_title: UMAP - Mandates - Single block multi-debit mandate
+sidebar_title: ReservePlus
+page_title: UMAP - Mandates - ReservePlus
 order: 1
 visible_in_sidebar: true
 ---
 
-## Single block multi-debit mandate
+## ReservePlus (Single block multi-debit mandate)
 
 <Text size="small" weight="600">
   PREREQUISITES&nbsp;
