--- a/content/payments/umap/merchant-onboarding/create-vpa-api.mdx
+++ b/content/payments/umap/merchant-onboarding/create-vpa-api.mdx
@@ -5,62 +5,80 @@ order: 3
 visible_in_sidebar: true
 ---
 
+## Create and assign VPA
+
 <Callout type="warning">
-    The merchant on-boarding APIs are only relevant for an aggregator. If you are an individual merchant, you can proceed to the{" "}<a href="/payments/umap/quickstart" target="_self">merchant quickstart</a> and either of our product pages <a href="/payments/umap/payments" target="_self">UPI payments</a> or <a href="/payments/umap/mandates" target="_self">UPI mandates</a>.
+  The merchant on-boarding APIs are only relevant for an aggregator. If you are
+  an individual merchant, you can proceed to the{" "}
+  <a href="/payments/umap/quickstart" target="_self">
+    merchant quickstart
+  </a>{" "}
+  and either of our product pages{" "}
+  <a href="/payments/umap/payments" target="_self">
+    UPI payments
+  </a>{" "}
+  or{" "}
+  <a href="/payments/umap/mandates" target="_self">
+    UPI mandates
+  </a>
+  .
 </Callout>
 
-<br/>
+<br />
 
-## Create and assign VPA
 This API can be used to assign a VPA to a merchant, which will serve as the merchant identifier for all participants in the UPI ecosystem.
 
 <table>
-    <tbody>
-        <tr>
-            <th>Staging host</th>
-            <td>
-                <code>https://umap-dev-core.setu.co/api</code>
-            </td>
-        </tr>
-        <tr>
-            <th>Method</th>
-            <td>
-                <code>POST</code>
-            </td>
-        </tr>
-        <tr>
-            <th>Path</th>
-            <td>
-                <code>/v1/merchants/vpas</code>
-            </td>
-        </tr>
-        <tr>
-            <th>Header</th>
-            <td>
-                <code>merchantId</code><br/>
-                <code>Authorization</code>: Bearer &lt;<b>insert_token_here</b>&gt;.
-                Generate this token using <a
-                    href="/payments/upi-deeplinks/resources/oauth"
-                    target="_blank">
-                    OAuth
-                </a> or <a
-                    href="/payments/upi-deeplinks/resources/jwt"
-                    target="_blank">
-                    JWT
-                </a>.<br />
-                <br />
-                <code>Content-Type</code>—will be <code>application/json</code>
-            </td>
-        </tr>
-        <tr>
-            <th>API reference</th>
-            <td>
-                <a href="/payments/umap/api-reference#/category~vpa/operation~vpa#create" target="_blank">
-                    Create VPA ↗
-                </a>
-            </td>
-        </tr>
-    </tbody>
+  <tbody>
+    <tr>
+      <th>Staging host</th>
+      <td>
+        <code>https://umap-dev-core.setu.co/api</code>
+      </td>
+    </tr>
+    <tr>
+      <th>Method</th>
+      <td>
+        <code>POST</code>
+      </td>
+    </tr>
+    <tr>
+      <th>Path</th>
+      <td>
+        <code>/v1/merchants/vpas</code>
+      </td>
+    </tr>
+    <tr>
+      <th>Header</th>
+      <td>
+        <code>merchantId</code>
+        <br />
+        <code>Authorization</code>: Bearer &lt;<b>insert_token_here</b>&gt;.
+        Generate this token using{" "}
+        <a href="/payments/upi-deeplinks/resources/oauth" target="_blank">
+          OAuth
+        </a>{" "}
+        or{" "}
+        <a href="/payments/upi-deeplinks/resources/jwt" target="_blank">
+          JWT
+        </a>
+        .<br />
+        <br />
+        <code>Content-Type</code>—will be <code>application/json</code>
+      </td>
+    </tr>
+    <tr>
+      <th>API reference</th>
+      <td>
+        <a
+          href="/payments/umap/api-reference#/category~vpa/operation~vpa#create"
+          target="_blank"
+        >
+          Create VPA ↗
+        </a>
+      </td>
+    </tr>
+  </tbody>
 </table>
 
 <hr class="primary" />
@@ -68,7 +86,7 @@ This API can be used to assign a VPA to a merchant, which will serve as the merc
 #### Sample request
 
 <CodeBlockWithCopy language="json">
-    {`{
+  {`{
     "merchantReferenceId": "1240689979139556557",
     "vpa": "deku@okokaxis"
 }`}
@@ -77,7 +95,7 @@ This API can be used to assign a VPA to a merchant, which will serve as the merc
 #### Sample response
 
 <CodeBlockWithCopy language="json">
-    {`{
+  {`{
   "addressProvider": "Axis",
   "createdAt": "2023-09-04 12:08:20.202644 +0530 IST",
   "id": "01ARZ3NDEKTSV4RRFFQ69G5FAV",
