--- a/content/payments/umap/payments/collect.mdx
+++ b/content/payments/umap/payments/collect.mdx
@@ -1,11 +1,11 @@
 ---
-sidebar_title: Collect request
+sidebar_title: Collect
 page_title: UPI payments - Collect
 order: 2
 visible_in_sidebar: true
 ---
 
-## Accept UPI payments with collect requests
+## Accept UPI payments with Collect
 
 <Callout type="warning">
   ⚠️{" "}
