--- a/content/payments/umap/payments/flash.mdx
+++ b/content/payments/umap/payments/flash.mdx
@@ -1,37 +1,48 @@
 ---
-sidebar_title: Intent/QR
-page_title: UPI payments - Intent/QR
+sidebar_title: Flash
+page_title: UPI payments - Flash
 order: 1
 visible_in_sidebar: true
 ---
 
-## Accept UPI payments with intent / QR
+## Accept UPI payments with Flash
 
 Merchants can offer their customers a seamless payment experience by utilizing UMAP APIs to create payment links. These links can either be directly integrated into their applications or converted into QR codes for easy scanning. Below is a detailed guide on how to implement this process:
 
 <hr class="primary" />
 
 ### Step 1 - Create payment link
+
 In the intent flow, a merchant generates a payment link which can be directly sent to customers, integrated to merchant app or coverted into a QR code which can be scanned by user's UPI app.
-<a href="/payments/umap/api-reference#/category~payment-link/operation~payment-link#create"target="_blank">
-    <code>Generate payment link</code> ↗
+
+<a
+  href="/payments/umap/api-reference#/category~payment-link/operation~payment-link#create"
+  target="_blank"
+>
+  <code>Generate payment link</code> ↗
 </a>
-<br/>
+<br />
 
 <hr class="primary" />
 
 ### Step 2 - Wait for customer to initiate transaction
+
 An intent payment is always initiated by a customer. This can happen in two ways
-* Customer scans a QR code representing the payment link
-* Customer is redirected using payment-link on merchant app
+
+- Customer scans a QR code representing the payment link
+- Customer is redirected using payment-link on merchant app
 
 <hr class="primary" />
 
 ### Step 3 - Retrieve payment details
+
 Following the initiation of the transaction, the system retrieves the payment details. This retrieval is based on the payment link ID or a reference number, ensuring you have access to transaction information for confirmation and record-keeping.
 
-<a href="/payments/umap/api-reference#/category~payment-link/operation~payment-link#fetchById"target="_blank">
-    <code>Retrieve payment details</code> ↗
+<a
+  href="/payments/umap/api-reference#/category~payment-link/operation~payment-link#fetchById"
+  target="_blank"
+>
+  <code>Retrieve payment details</code> ↗
 </a>
 
 <hr class="primary" />
@@ -39,18 +50,18 @@ Following the initiation of the transaction, the system retrieves the payment de
 ## Payment flow interactions
 
 <img
-    src="https://storage.googleapis.com/strapi-assets/latest/pay-flow/pay-flow.png"
-    alt="Bridge"
+  src="https://storage.googleapis.com/strapi-assets/latest/pay-flow/pay-flow.png"
+  alt="Bridge"
 />
 
 <hr class="primary" />
 
 <NextPage
-    info={{
-        description: "Create intent link",
-        slug: "/payments/umap/payments/intent-qr/create-payment-link",
-        title: "Start accepting UPI payments with Intent QR",
-    }}
+  info={{
+    description: "Create intent link",
+    slug: "/payments/umap/payments/intent-qr/create-payment-link",
+    title: "Start accepting UPI payments with Intent QR",
+  }}
 />
 
 <WasPageHelpful />
