--- a/content/payments/umap/api-integration/aggregators.mdx
+++ b/content/payments/umap/api-integration/aggregators.mdx
@@ -8,9 +8,11 @@ visible_in_sidebar: true
 ## API integration for aggregators
 
 <Text size="small" weight="600">
-    PREREQUISITES&nbsp;
+  PREREQUISITES&nbsp;
 </Text>
-<a href="/payments/umap/quickstart/aggregators" target="_self">🌟 Aggregator quickstart ↗</a>
+<a href="/payments/umap/quickstart/aggregators" target="_self">
+  🌟 Aggregator quickstart ↗
+</a>
 
 <hr class="primary" />
 
@@ -18,16 +20,15 @@ Once you have been on-boarded on to Bridge as an aggregator and business formali
 
 <hr class="primary" />
 
-
 #### Step 1 — Configure a merchant
 
 As an aggregator on UMAP, you have to first create a merchant by providing their business details and creating a VPA (which associates them to you, the aggregator). After this, you can enable UPI products for the merchant.
 
 <Card padding="small" shape="rounded">
-    <Link href="/payments/umap/merchant-onboarding">Merchant on-boarding</Link>
-    <Text weight="400" marginTop="nano" marginBottom="none" size="small">
-        Create your first merchant on UMAP
-    </Text>
+  <Link href="/payments/umap/merchant-onboarding">Merchant on-boarding</Link>
+  <Text weight="400" marginTop="nano" marginBottom="none" size="small">
+    Create your first merchant on UMAP
+  </Text>
 </Card>
 
 <hr class="primary" />
@@ -37,32 +38,22 @@ As an aggregator on UMAP, you have to first create a merchant by providing their
 Once a merchant has been associated to your aggregator account, you can enable payment/subscription products under UPI payments and UPI mandates, with our APIs.
 
 <Row>
-    <Portion desktopSpan="half" marginBottom="nano">
-        <Card padding="small" shape="rounded">
-            <Link href="payments/umap/payments">UPI payments</Link>
-            <Text
-                weight="400"
-                marginTop="nano"
-                marginBottom="none"
-                size="small"
-            >
-                Enable UPI payments with QR, Collect & TPV
-            </Text>
-        </Card>
-    </Portion>
-     <Portion desktopSpan="half">
-        <Card padding="small" shape="rounded">
-            <Link href="payments/umap/mandates">UPI Mandates</Link>
-            <Text
-                weight="400"
-                marginTop="nano"
-                marginBottom="none"
-                size="small"
-            >
-                Enable recurring payments with UPI mandates
-            </Text>
-        </Card>
-    </Portion>
+  <Portion desktopSpan="half" marginBottom="nano">
+    <Card padding="small" shape="rounded">
+      <Link href="payments/umap/payments">UPI payments</Link>
+      <Text weight="400" marginTop="nano" marginBottom="none" size="small">
+        Enable UPI payments with Flash, Collect & TPV
+      </Text>
+    </Card>
+  </Portion>
+  <Portion desktopSpan="half">
+    <Card padding="small" shape="rounded">
+      <Link href="payments/umap/mandates">UPI Mandates</Link>
+      <Text weight="400" marginTop="nano" marginBottom="none" size="small">
+        Enable recurring payments with UPI mandates
+      </Text>
+    </Card>
+  </Portion>
 </Row>
 
 <hr class="primary" />
@@ -72,11 +63,11 @@ Once a merchant has been associated to your aggregator account, you can enable p
 Once you have on-boarded multiple merchants, and enabled products for them, you can also manage your merchants by editing/disabling them directly on Bridge, or through our merchant management APIs.
 
 <NextPage
-    info={{
-        description: "Create your first merchant",
-        slug: "/payments/umap/merchant-onboarding",
-        title: "Merchant on-boarding",
-    }}
+  info={{
+    description: "Create your first merchant",
+    slug: "/payments/umap/merchant-onboarding",
+    title: "Merchant on-boarding",
+  }}
 />
 
 <WasPageHelpful />
