--- a/content/payments/umap/api-integration/merchants.mdx
+++ b/content/payments/umap/api-integration/merchants.mdx
@@ -8,9 +8,11 @@ visible_in_sidebar: true
 ## API integration for merchants
 
 <Text size="small" weight="600">
-    PREREQUISITES&nbsp;
+  PREREQUISITES&nbsp;
 </Text>
-<a href="/payments/umap/quickstart/merchants" target="_self">🌟 Merchant quickstart ↗</a>
+<a href="/payments/umap/quickstart/merchants" target="_self">
+  🌟 Merchant quickstart ↗
+</a>
 
 <hr class="primary" />
 
@@ -19,48 +21,54 @@ visible_in_sidebar: true
 Once you have on-boarded onto UMAP as a merchant, and have your API credentials, the next step is to choose the right product for your use case. Below are some example scenarios to help you understand these products better—
 
 <table>
-    <tr>
-        <td>
-            <ul>
-                <Text as="h6">Use UPI payments to</Text>
-                <Text>
-                    <li>
-                        offer QR code and payment links for customers in-store or via apps and messaging.
-                    </li>
-                </Text>
-                <Text>
-                    <li>
-                        enhance guest checkout with direct UPI collect payments on preferred UPI apps.
-                    </li>
-                </Text>
-                <Text>
-                    <li>
-                        comply with regulations through Third Party Validation (TPV), for BFSI merchants.
-                    </li>
-                </Text>
-            </ul>
-        </td>
-        <td>
-            <ul>
-                <Text as="h6">Use UPI mandates to</Text>
-                <Text>
-                    <li>
-                        use one-time mandates to clear limited stock exclusively for designated customers.
-                    </li>
-                </Text>
-                <Text>
-                    <li>
-                        instantly create service subscriptions with UPI Mandates for recurring payments.
-                    </li>
-                </Text>
-                <Text>
-                    <li>
-                        replicate wallet functionality with single block multi-debit mandates from savings accounts.
-                    </li>
-                </Text>
-            </ul>
-        </td>
-    </tr>
+  <tr>
+    <td>
+      <ul>
+        <Text as="h6">Use UPI payments to</Text>
+        <Text>
+          <li>
+            offer QR code and payment links for customers in-store or via apps
+            and messaging.
+          </li>
+        </Text>
+        <Text>
+          <li>
+            enhance guest checkout with direct UPI collect payments on preferred
+            UPI apps.
+          </li>
+        </Text>
+        <Text>
+          <li>
+            comply with regulations through Third Party Validation (TPV), for
+            BFSI merchants.
+          </li>
+        </Text>
+      </ul>
+    </td>
+    <td>
+      <ul>
+        <Text as="h6">Use UPI mandates to</Text>
+        <Text>
+          <li>
+            use one-time mandates to clear limited stock exclusively for
+            designated customers.
+          </li>
+        </Text>
+        <Text>
+          <li>
+            instantly create service subscriptions with UPI Mandates for
+            recurring payments.
+          </li>
+        </Text>
+        <Text>
+          <li>
+            replicate wallet functionality with single block multi-debit
+            mandates from savings accounts.
+          </li>
+        </Text>
+      </ul>
+    </td>
+  </tr>
 </table>
 
 <hr class="primary" />
@@ -68,34 +76,34 @@ Once you have on-boarded onto UMAP as a merchant, and have your API credentials,
 #### Select the right product for your use-case
 
 <Row>
-    <Portion desktopSpan="half" marginBottom="nano">
-        <Card padding="small" shape="rounded">
-            <Link href="/payments/umap/payments">
-                <Element as="div">
-                    <Text size="large" weight="600" textColor="blue-90">
-                        UPI payments
-                    </Text>
-                    <Text weight="400">
-                        Start accepting UPI payments with QR, Collect & TPV.
-                    </Text>
-                </Element>
-            </Link>
-        </Card>
-    </Portion>
-    <Portion desktopSpan="half">
-        <Card padding="small" shape="rounded">
-            <Link href="/payments/umap/mandates">
-                <Element as="div">
-                    <Text size="large" weight="600" textColor="blue-90">
-                        UPI mandates
-                    </Text>
-                    <Text weight="400">
-                        Start enabling recurring payments with UPI Mandates.
-                    </Text>
-                </Element>
-            </Link>
-        </Card>
-    </Portion>
+  <Portion desktopSpan="half" marginBottom="nano">
+    <Card padding="small" shape="rounded">
+      <Link href="/payments/umap/payments">
+        <Element as="div">
+          <Text size="large" weight="600" textColor="blue-90">
+            UPI payments
+          </Text>
+          <Text weight="400">
+            Start accepting UPI payments with Flash, Collect & TPV.
+          </Text>
+        </Element>
+      </Link>
+    </Card>
+  </Portion>
+  <Portion desktopSpan="half">
+    <Card padding="small" shape="rounded">
+      <Link href="/payments/umap/mandates">
+        <Element as="div">
+          <Text size="large" weight="600" textColor="blue-90">
+            UPI mandates
+          </Text>
+          <Text weight="400">
+            Start enabling recurring payments with UPI Mandates.
+          </Text>
+        </Element>
+      </Link>
+    </Card>
+  </Portion>
 </Row>
 
 <WasPageHelpful />
