--- a/content/payments/umap/payments/tpv.mdx
+++ b/content/payments/umap/payments/tpv.mdx
@@ -1,52 +1,61 @@
 ---
-sidebar_title: Third party validation
+sidebar_title: TPV
 page_title: UPI payments - TPV
 order: 3
 visible_in_sidebar: true
 ---
 
-## Third party validation
+## TPV (Third party validation)
 
 The Third Party Validation (TPV) request introduces an enhanced layer of security to the traditional payment link process by incorporating a conditional validation check of the customer’s bank account details. This procedure is designed to ensure that payments are made from a bank account that has been previously registered with the merchant, typically during the on-boarding or KYC process.
 
 ### TPV process
+
 The TPV process is a mandatory check required for most capital markets merchants and is mandated by SEBI to ensure that funds are collected from a verified account of the customer only. It can also be beneficial for other use-cases like insurance, loans and loyalty programs.
 
 <hr class="primary" />
 
 #### Step 1 - Create payment link with validation
+
 When creating a payment link, merchants have the option to include the customer's bank account details as part of the link creation request. This additional information is aimed at facilitating the validation process.
 
-<a href="/payments/umap/api-reference#/category~tpv/operation~tpv#createTPV"target="_blank">
-    <code>Create request</code> ↗
+<a
+  href="/payments/umap/api-reference#/category~tpv/operation~tpv#createTPV"
+  target="_blank"
+>
+  <code>Create request</code> ↗
 </a>
 
 <hr class="primary" />
 
 #### Step 2 - Validate account during transaction
+
 As the transaction is initiated and processed through the UPI system, the bank account details provided at the payment stage are compared against those supplied by the merchant. This comparison is conducted in real-time, with the UMAP system receiving the customer's bank account details from NPCI.
 
 <hr class="primary" />
 
 #### Step 3 - Accept or reject transaction
+
 Based on the outcome of the validation check, the UMAP system decides whether to accept or reject the transaction. If the customer’s bank account details match the details registered with the merchant, the transaction proceeds. If there is a discrepancy, the transaction is halted to prevent unauthorized payments.
 
 <hr class="primary" />
 
 ### TPV Process Flow
+
 <img
-    src="https://storage.googleapis.com/strapi-assets/latest/TPV-flow/TPV-flow.png"
-    alt="Bridge"
+  src="https://storage.googleapis.com/strapi-assets/latest/TPV-flow/TPV-flow.png"
+  alt="Bridge"
 />
-This TPV process ensures an additional layer of security, aligning payment transactions with pre-verified bank account details, thus minimizing the risk of fraudulent transactions and enhancing trust between merchants and customers.
+This TPV process ensures an additional layer of security, aligning payment transactions
+with pre-verified bank account details, thus minimizing the risk of fraudulent transactions
+and enhancing trust between merchants and customers.
 
 <NextPage
-    info={{
-        description:
-            "Create TPV request",
-        slug: "/payments/umap/payments/tpv/create-tpv",
-        title: "Create TPV request",
-    }}
+  info={{
+    description: "Create TPV request",
+    slug: "/payments/umap/payments/tpv/create-tpv",
+    title: "Create TPV request",
+  }}
 />
 
 <WasPageHelpful />
